--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -51,7 +51,7 @@
         <Compile Include="Core\Course.cs" />
         <Compile Include="Core\Direction.cs" />
         <Compile Include="Core\Instruction.cs" />
-        <Compile Include="Core\Position.cs" />
+        <Compile Include="Core\Location.cs" />
         <Compile Include="Days\Day1.cs" />
         <Compile Include="Days\Day2.cs" />
         <Compile Include="Helpers\FileReader.cs" />
