--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -48,12 +48,16 @@
         <None Include="data\day2.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Include="data\day3.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <Compile Include="Core\Course.cs" />
         <Compile Include="Core\Direction.cs" />
         <Compile Include="Core\Instruction.cs" />
         <Compile Include="Core\Location.cs" />
         <Compile Include="Days\Day1.cs" />
         <Compile Include="Days\Day2.cs" />
+        <Compile Include="Days\Day3.cs" />
         <Compile Include="Helpers\FileReader.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
