--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -51,13 +51,20 @@
         <None Include="data\day3.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
-        <Compile Include="Core\Course.cs" />
-        <Compile Include="Core\Direction.cs" />
-        <Compile Include="Core\Instruction.cs" />
-        <Compile Include="Core\Location.cs" />
+        <None Include="data\day4.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
+        <Compile Include="Core\Bingo\Bingo.cs" />
+        <Compile Include="Core\Bingo\Cell.cs" />
+        <Compile Include="Core\Bingo\Grid.cs" />
+        <Compile Include="Core\Course\Course.cs" />
+        <Compile Include="Core\Course\Direction.cs" />
+        <Compile Include="Core\Course\Instruction.cs" />
+        <Compile Include="Core\Course\Location.cs" />
         <Compile Include="Days\Day1.cs" />
         <Compile Include="Days\Day2.cs" />
         <Compile Include="Days\Day3.cs" />
+        <Compile Include="Days\Day4.cs" />
         <Compile Include="Helpers\FileReader.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
