--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -57,6 +57,9 @@
         <None Include="data\day5.txt">
             <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
         </None>
+        <None Include="data\day6.txt">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+        </None>
         <Compile Include="Core\Bingo\Bingo.cs" />
         <Compile Include="Core\Bingo\Cell.cs" />
         <Compile Include="Core\Bingo\Grid.cs" />
