--- a/AdventOfCode2021/AdventOfCode2021.csproj
+++ b/AdventOfCode2021/AdventOfCode2021.csproj
@@ -79,6 +79,7 @@
         <Compile Include="Days\Day4.cs" />
         <Compile Include="Days\Day5.cs" />
         <Compile Include="Days\Day6.cs" />
+        <Compile Include="Days\Day7.cs" />
         <Compile Include="Helpers\FileReader.cs" />
         <Compile Include="Program.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
